<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="131dp"
        android:text="@string/result_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultInfo"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:onClick="calculateReceipt"
        android:text="@string/convert_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarFood" />

    <EditText
        android:id="@+id/tipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/euro_hint"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/receiptText"
        app:layout_constraintTop_toBottomOf="@+id/receiptText" />

    <EditText
        android:id="@+id/receiptText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="81dp"
        android:ems="10"
        android:hint="@string/othertext_string"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <RatingBar
        android:id="@+id/ratingBarService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:numStars="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipText" />

    <TextView
        android:id="@+id/resultInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/final_receipt_info_string"
        app:layout_constraintBaseline_toBaselineOf="@+id/resultTextView"
        app:layout_constraintEnd_toStartOf="@+id/resultTextView"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/ratingBarFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/ratingBarService"
        app:layout_constraintTop_toBottomOf="@+id/foodInfo" />

    <TextView
        android:id="@+id/serviceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/service_rating_string"
        app:layout_constraintBottom_toTopOf="@+id/ratingBarService"
        app:layout_constraintEnd_toEndOf="@+id/ratingBarService"
        app:layout_constraintStart_toStartOf="@+id/ratingBarService" />

    <TextView
        android:id="@+id/foodInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/food_rating_info_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBarService" />

</androidx.constraintlayout.widget.ConstraintLayout>